# IAIO

./: flake.nix
.github/workflows/: build-iso.yml
ai-shell/: ai_shell.py  default.nix  package.json
ai-shell/src/: index.html  main.js  style.css
ai-shell/src-tauri/: Cargo.toml  tauri.conf.json
ai-shell/src-tauri/src/: commands.rs  main.rs  ollama.rs  workspace.rs
nix/: configuration.nix
nix/modules/: ai-engine.nix  ai-shell.nix  wayland.nix
scripts/: build-iso.sh  dev-shell.sh
