[package]
name        = "ai-shell"
version     = "0.1.0"
edition     = "2021"
description = "AI-OS native shell — kiosk compositor frontend"

[lib]
name        = "ai_shell_lib"
crate-type  = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-shell"
path = "src/main.rs"

[dependencies]
tauri         = { version = "2", features = ["tray-icon"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }
reqwest       = { version = "0.12", features = ["json", "stream"] }
futures-util  = "0.3"
uuid          = { version = "1", features = ["v4"] }
chrono        = { version = "0.4", features = ["serde"] }
thiserror     = "1"
anyhow        = "1"

[features]
default         = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"    # minimize binary size
lto       = true
codegen-units = 1
panic     = "abort"
strip     = true
